--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header *ngIf="info" class="ae-container-fluid ae-container-fluid--full rk-header ">
+<header class="ae-container-fluid ae-container-fluid--full rk-header ">
   <input type="checkbox" id="mobile-menu" class="rk-mobile-menu">
   <label for="mobile-menu">
     <svg>
@@ -13,7 +13,7 @@
   </label>
   <div class="ae-container-fluid rk-topbar">
     <h1 class="rk-logo">
-      <a routerLink="/">{{ info.titulo }}<sup>tm</sup></a>
+      <a routerLink="/">{{ ips.info?.titulo }}<sup>tm</sup></a>
     </h1>
     <nav class="rk-navigation">
       
