--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -10,12 +10,12 @@
 
     <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
       <a *ngFor="let producto of ps.productos"
-         routerLink="/item" 
+         [routerLink]="['/item', producto.cod]"
          class="animate__animated animate__fadeIn rk-item ae-masonry__item">
-        <img src="assets/productos/{{producto?.url}}.jpg" alt="">
+        <img src="assets/productos/{{producto.url}}.jpg" alt="">
         <div class="item-meta">
-          <h2>{{ producto?.titulo }}</h2>
-          <p>{{ producto?.categoria }}</p>
+          <h2>{{ producto.titulo }}</h2>
+          <p>{{ producto.categoria }}</p>
         </div>
       </a>
     </div> 
