--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="ae-container-fluid rk-footer ">
+<footer *ngIf="ips.info" class="ae-container-fluid rk-footer ">
   <div class="ae-grid ae-grid--collapse">
     <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-left">
       <ul class="rk-menu rk-footer-menu">
@@ -12,22 +12,22 @@
       <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ year }} GASTON PORTFOLIO </span>All Right Reserved.</p>
     </div>
     <div class="ae-grid__item item-lg-4 au-xs-ta-center">
-      <a target="_blank" [href]="ips.info?.facebook" class="rk-social-btn ">
+      <a target="_blank" [href]="ips.info.facebook" class="rk-social-btn ">
         <svg>
           <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
         </svg>
       </a>
-      <a target="_blank" [href]="ips.info?.twitter" class="rk-social-btn ">
+      <a target="_blank" [href]="ips.info.twitter" class="rk-social-btn ">
         <svg>
           <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
         </svg>
       </a>
-      <a target="_blank" [href]="ips.info?.instagram" class="rk-social-btn ">
+      <a target="_blank" [href]="ips.info.instagram" class="rk-social-btn ">
         <svg>
           <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
         </svg>
       </a>
-      <a target="_blank" [href]="ips.info?.tumblr" class="rk-social-btn ">
+      <a target="_blank" [href]="ips.info.tumblr" class="rk-social-btn ">
         <svg>
           <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
         </svg>
@@ -37,7 +37,7 @@
       <p class="rk-footer__text rk-footer__contact "> 
         <span class="ae-u-bold">Email: </span>
         <span class="ae-u-bolder"> 
-          <a href="mailTo:{{ips.info?.email}}" class="rk-dark-color "> {{ ips.info?.email }} </a>
+          <a href="mailTo:{{ips.info.email}}" class="rk-dark-color "> {{ ips.info.email }} </a>
         </span>
       </p>
       <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
