--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,8 +12,8 @@
     </svg>
   </label>
   <div class="ae-container-fluid rk-topbar">
-    <h1 class="rk-logo">
-      <a routerLink="/">{{ ips.info?.titulo }}<sup>tm</sup></a>
+    <h1 *ngIf="ips.info" class="rk-logo">
+      <a routerLink="/">{{ ips.info.titulo }}<sup>tm</sup></a>
     </h1>
     <nav class="rk-navigation">
       
@@ -27,14 +27,19 @@
         </li>
       </ul>
 
-      <form class="rk-search">
-        <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+      <div class="rk-search">
+        <input type="text" 
+               (keyup.enter)="buscarProducto(txtBuscar.value)"
+               placeholder="Buscar..." 
+               id="urku-search" 
+               class="rk-search-field"
+               #txtBuscar>
         <label for="urku-search">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-search"></use>
           </svg>
         </label>
-      </form>
+      </div>
 
     </nav>
   </div>
